cluster-local/deeppharmgraph/processing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-processing-webserver
  namespace: deeppharmgraph
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  hostnames: [dpg-processing.dev.lan.shamrock.systems]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dpg-processing-airflow-web
          port: 8080
